// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/MegaButton AsLink smoke-test 1`] = `
<div data-test-block="true">
  <a class="_button_cezwo_1"
     href="https://www.skatteetaten.no"
     role="button"
  >
    <span class>
      Klikk her
    </span>
  </a>
</div>
`;

exports[`Tester/MegaButton AsLinkEmptyString smoke-test 1`] = `
<div data-test-block="true">
  <a class="_button_cezwo_1"
     href
  >
    <span class>
      Klikk her
    </span>
  </a>
</div>
`;

exports[`Tester/MegaButton AsLinkExternal play-test 1`] = `
<div data-test-block="true">
  <a class="_button_cezwo_1"
     href="https://www.skatteetaten.no"
     role="button"
  >
    <span class>
      Klikk her
    </span>
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_cezwo_34"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </a>
</div>
`;

exports[`Tester/MegaButton Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="button"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          accesskey="j"
          type="button"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="button"
          aria-describedby="testid1234"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlId"
          class="_button_cezwo_1 dummyClassname"
          lang="nb"
          data-testid="123ID"
          type="button"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithDisabled play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          disabled
          type="button"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="button"
  >
    <span class>
      Knapp har blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithExternalIcon play-test 1`] = `
<div data-test-block="true">
  <a class="_button_cezwo_1"
     href="#"
     role="button"
  >
    <span class>
      Klikk her
    </span>
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_cezwo_34"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </a>
</div>
`;

exports[`Tester/MegaButton WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="button"
  >
    <span class>
      Denne knappen har en veldig lang tekst. Så lang at den må brekke.
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="button"
  >
    <span class>
      Denneknappenharenveldiglangtekst.Sålangatdenmåbrekke.
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongTextAndExternalIcon smoke-test 1`] = `
<div data-test-block="true">
  <a class="_button_cezwo_1"
     href="#"
     role="button"
  >
    <span class>
      Denne knappen har en veldig lang tekst. Icon skal da plasseres løpende etter tekster på siste linje
    </span>
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_cezwo_34"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </a>
</div>
`;

exports[`Tester/MegaButton WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/MegaButton WithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <button class="_button_cezwo_1"
            type="button"
    >
      <span class>
        Klikk her
      </span>
    </button>
  </div>
  <button class="_button_cezwo_1"
          type="button"
  >
    <span class="_hide_cezwo_68">
      Klikk her
    </span>
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 _spinner_cezwo_72"
    >
      <div class="_spinnerAnimation_wnf1f_40">
      </div>
      <span id="title-:r3:"
            class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66"
      >
        Laster inn
      </span>
    </div>
  </button>
</div>
`;

exports[`Tester/MegaButton WithType play-test 1`] = `
<div data-test-block="true">
  <button class="_button_cezwo_1"
          type="submit"
  >
    <span class>
      Klikk her
    </span>
  </button>
</div>
`;
